force-app/main/default/objects/SPEN_IVR__c/SPEN_IVR__c.object-meta.xml
<CustomObject>
    <description>This object will hold IVR flow details.</description>
    <label>IVR</label>
    <nameField>
        <label>IVR Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IVR</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>