force-app/main/default/objects/SPEN_IVR__c/fields/SPEN_CallGroup__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CallGroup__c</fullName>
    <label>Call Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SPEN_CallGroup</valueSetName>
    </valueSet>
</CustomField>