force-app/main/default/objects/SPEN_IVR__c/fields/SPEN_FlowName__c.field-meta.xml
<CustomField>
    <fullName>SPEN_FlowName__c</fullName>
    <description>Hold the flow name in IVR object</description>
    <label>Flow Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>