force-app/main/default/objects/SPEN_IVR__c/fields/SPEN_FlowNo__c.field-meta.xml
<CustomField>
    <fullName>SPEN_FlowNo__c</fullName>
    <description>Hold the Flow No of IVR Object</description>
    <label>Flow No</label>
    <length>30</length>
    <type>Text</type>
</CustomField>