force-app/main/default/objects/SPEN_IVR__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>SPEN_CallGroup__c</columns>
    <columns>NAME</columns>
    <columns>SPEN_ExternalId__c</columns>
    <columns>SPEN_FlowNo__c</columns>
    <columns>SPEN_FlowName__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>